# FaceFusionCpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DISCLAIMER.txt  DOCUMENT.md  DOCUMENT_CN.md  FaceFusionCpp.ini  README.md  README_CN.md  app_config.yaml  build.ps1  build.py  build_log.txt  cTempclaude-a249-cwd  change_log.md  config.yaml  faceFusionCpp.ini  findings.md  progress.md  project.yaml  task_config.yaml  task_plan.md  vcpkg.json
facefusionCpp/src/: CMakeLists.txt  cli_config.ixx  config.cpp  config.h  core.cpp  core.h  core.ixx  core_options.ixx  core_run_options.ixx  core_task.cpp  core_task.ixx  crypto.ixx  downloader.cpp  downloader.h  downloader.ixx  ffmpeg_runner.cpp  ffmpeg_runner.h  ffmpeg_runner.ixx  file_system.cpp  file_system.h  file_system.ixx  inference_session.cpp  inference_session.h  inference_session.ixx  ini_config.cpp  ini_config.ixx  logger.cpp  logger.h  logger.ixx  metadata.h  metadata.ixx  model_manager.cpp  model_manager.h  model_manager.ixx  platform.h  progress_bar.cpp  progress_bar.h  progress_bar.ixx  serialize.ixx  task.ixx  (+10 more)
facefusionCpp/src/ai/: inference_session.cpp  inference_session.ixx  model_manager.cpp  model_manager.ixx
facefusionCpp/src/core/: core.cpp  core.ixx  core_options.ixx  metadata.ixx  types.ixx
facefusionCpp/src/face/: CMakeLists.txt  face.cpp  face.h  face.ixx  face_analyser.cpp  face_analyser.ixx  face_helper.cpp  face_helper.h  face_helper.ixx  face_selector.cpp  face_selector.ixx  face_store.cpp  face_store.h  face_store.ixx
facefusionCpp/src/infrastructure/: CMakeLists.txt  boost_impl.cpp  crypto.cpp  crypto.ixx  downloader.cpp  downloader.ixx  file_system.cpp  file_system.ixx  logger.cpp  logger.ixx  progress_bar.cpp  progress_bar.ixx  progress_observer.ixx  serialize.ixx  serialize_core.ixx  serialize_model.ixx  serialize_options.ixx  serialize_task.ixx  thread_pool.cpp  thread_pool.ixx  utils.cpp  utils.ixx
facefusionCpp/src/media/: ffmpeg_runner.cpp  ffmpeg_runner.ixx  vision.cpp  vision.ixx
facefusionCpp/src/processors/: CMakeLists.txt  processor_base.cpp  processor_base.h  processor_base.ixx  processor_hub.cpp  processor_hub.ixx  processor_pool.cpp  processor_pool.ixx
facefusionCpp/src/task/: core_task.cpp  core_task.ixx  task.ixx  task_manager.cpp  task_manager.ixx
src/app/: CMakeLists.txt  face_fusion.cpp  version.cpp.in  version.ixx
src/app/cli/: CMakeLists.txt  app_cli.cpp  app_cli.ixx  system_check.cpp  system_check.ixx
src/app/config/: CMakeLists.txt  app_config.ixx  config_merger.cpp  config_merger.ixx  config_types.ixx  config_validator.cpp  config_validator.ixx  error_codes.cpp  task_config.ixx
src/domain/ai/: CMakeLists.txt  model_manager.cpp  model_manager.ixx  model_repository.cpp  model_repository.ixx
src/domain/face/: CMakeLists.txt  face.cpp  face.ixx  face_helper.cpp  face_helper.ixx  face_impl.cpp  face_selector.cpp  face_selector.ixx  face_store.cpp  face_store.ixx  face_test_support.ixx  face_types.ixx
src/domain/pipeline/: CMakeLists.txt  pipeline.ixx  pipeline_adapters.cpp  pipeline_adapters.ixx  pipeline_api.ixx  pipeline_context.ixx  pipeline_types.ixx  processor_factory.ixx  queue.ixx
src/foundation/ai/: CMakeLists.txt  inference_session.cpp  inference_session.ixx  inference_session_registry.cpp  inference_session_registry.ixx  session_pool.cpp  session_pool.ixx
src/foundation/infrastructure/: CMakeLists.txt  concurrent_crypto.cpp  concurrent_crypto.ixx  concurrent_crypto_impl.cpp  concurrent_file_system.cpp  concurrent_file_system.ixx  concurrent_queue.ixx  console.cpp  console.ixx  core_utils.cpp  core_utils.ixx  core_utils_conversion.ixx  core_utils_encoding.ixx  core_utils_random.ixx  crypto.cpp  crypto.ixx  crypto_impl.cpp  cuda_utils.cpp  cuda_utils.ixx  file_system.cpp  file_system.ixx  logger.cpp  logger.ixx  logger_impl.cpp  logger_types.ixx  network.cpp  network.ixx  network_impl.cpp  opencv_workaround.hpp  process.cpp  process.ixx  progress.cpp  progress.ixx  progress_impl.cpp  scoped_timer.cpp  scoped_timer.ixx  test_support.cpp  test_support.ixx  test_support_impl.cpp  thread_pool.cpp  (+1 more)
src/foundation/media/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.ixx  ffmpeg_reader.cpp  ffmpeg_remuxer.cpp  ffmpeg_remuxer.ixx  ffmpeg_writer.cpp  vision.cpp  vision.ixx
src/services/pipeline/: CMakeLists.txt  checkpoint_manager.cpp  checkpoint_manager.ixx  metrics_collector.cpp  metrics_collector.ixx  pipeline_context.ixx  pipeline_runner.cpp  pipeline_runner.ixx  runner_image.cpp  runner_types.cpp  runner_video.cpp  shutdown_handler.cpp  shutdown_handler.ixx  utils.ixx
tests/: CMakeLists.txt  README.md  example_test.cpp
tests/benchmark/: CMakeLists.txt
tests/benchmark/app/: pipeline_benchmark.cpp
tests/common/: CMakeLists.txt  test_paths.cpp  test_paths.h
tests/common/fixtures/: base_test_fixture.cpp  base_test_fixture.ixx  global_env_helper.cpp  global_env_helper.h  global_env_link.h  integration_test_fixture.cpp  integration_test_fixture.ixx  unit_test_fixture.cpp  unit_test_fixture.ixx
tests/common/generators/: face_generator.ixx  image_generator.ixx
tests/common/matchers/: opencv_matchers.ixx
tests/domain/face/: CMakeLists.txt  face_helper_test.cpp  face_store_test.cpp  test_face.cpp
tests/e2e/: README.md  test_batch_image_processing.py
tests/e2e/configs/: e2e_baseline.yaml  e2e_image_2k_stress.yaml  e2e_image_512_baseline.yaml  e2e_image_720p.yaml  e2e_image_batch.yaml  e2e_image_multi_processor.yaml  e2e_image_multi_step.yaml  e2e_image_palette_edge.yaml  e2e_image_single.yaml  e2e_video_baseline.yaml  e2e_video_batch.yaml  e2e_video_checkpoint.yaml  e2e_video_multi_step.yaml  e2e_video_strict_memory.yaml  e2e_video_tolerant_memory.yaml
tests/helpers/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/mocks/: CMakeLists.txt
tests/scripts/: test_build_py.py  test_msvc_env.py
tests/test_support/: CMakeLists.txt  memory_check_win.hpp  memory_monitor.hpp  nvml_monitor.hpp  performance_validator.hpp  test_constants.hpp
tests/unit/: CMakeLists.txt
(+643 files in other folders)
